[tool.poetry]
name = "yt-lp"
version = "1.0.0"
description = "Youtube Playlist Length"
authors = ["AlexBlandin"]

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2023.11.16"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 2
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ERA", # code comments actually help 
  "INP001", # useless before hatch
  "TD003", # not using github to track todo/issues
  "S311", # I know when to use secrets
  "T20", # print is good, actually 
 "W191", "E111", "E114", "E117", "E203", "D206", "D212", "D300", "Q", "COM812", "COM819", "ISC001", "ISC002", # these are all formatted away
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 120
from_first = true
indent = "  "
