[project]
name = "yt-pl"
description = "Youtube Playlist Length"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AlexBlandin" }]
dependencies = ["yt-dlp"]

[project.optional-dependencies]
toml = ["pytomlpp"]
cli = ["colorama; platform_system == 'Windows'"]
all = ["toml", "cli"]
lint = ["ruff"]
dev = ["all", "lint"]

[project.urls]
Documentation = "https://github.com/alexblandin/yt-pl#readme"
Issues = "https://github.com/alexblandin/yt-pl/issues"
Source = "https://github.com/alexblandin/yt-pl"

[tool.ruff]
indent-width = 2
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ERA",    # code comments actually help
  "TD003",  # not using github to track todo/issues
  "S311",   # I know when to use secrets
  "T20",    # print is good, actually 
  "W191",   # ruff format
  "E111",   # ruff format
  "E114",   # ruff format
  "E117",   # ruff format
  "E203",   # ruff format
  "D206",   # ruff format
  "D212",   # ruff format
  "D300",   # ruff format
  "Q",      # ruff format
  "COM812", # ruff format
  "COM819", # ruff format
  "ISC001", # ruff format
  "ISC002", # ruff format
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false
